# ssau-ist-6133-shkalin-c-multitasking

./: .gitignore  CMakeLists.txt  run__1_processes.sh  run__2_2_posix_threads_1.sh  run__2_3_posix_threads_2.sh  run__2_threads.sh  run__lab_01.sh  run__lab_02.sh
include/lab_01/: arithmetic_processes.h  file_paths.h  task_statuses.h  utils.h
src/1_processes/: hello.c  main.c
src/2_threads/: main.c  posix_threads_1.c  posix_threads_2.c
src/lab_01/: arithmetic_processes.c  main.c
src/lab_02/: rocket.c
